--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="yandex-verification" content="408d721c250800c6" />
     <title>Маникюрный салон | Титановые ногти</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/436/436469.png" sizes="any">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BETR1B8E28"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-BETR1B8E28');
+    </script>
     <style>
         :root {
             --primary: #ff6b8b;
@@ -1796,4 +1802,5 @@
     </script>
 </body>
 </html>
+
 
